# tde-nimble

./: .gitignore  .gitmodules  CMakeLists.txt
apps/: CMakeLists.txt
apps/bleprph/src/: main.c
apps/btshell/: CMakeLists.txt
apps/btshell/ld/: boot-nrf52xxaa.ld  nrf52xxaa.ld
apps/btshell/src/: cmd.c  gatt_svr.c  main.c  sysinit_app.c
ext/: CMakeLists.txt
ext/tinycrypt/: CMakeLists.txt
nimble/: CMakeLists.txt
nimble/common/: CMakeLists.txt
nimble/common/include/syscfg/: syscfg.h
nimble/controller/: CMakeLists.txt
nimble/drivers/: CMakeLists.txt
nimble/drivers/nrf52/: CMakeLists.txt
nimble/host/: CMakeLists.txt
nimble/host/include/host/: ble_hs_log.h
nimble/host/services/: CMakeLists.txt
nimble/host/services/ans/: CMakeLists.txt
nimble/host/services/bas/: CMakeLists.txt
nimble/host/services/bleuart/: CMakeLists.txt
nimble/host/services/dis/: CMakeLists.txt
nimble/host/services/gap/: CMakeLists.txt
nimble/host/services/gatt/: CMakeLists.txt
nimble/host/services/ias/: CMakeLists.txt
nimble/host/services/ipss/: CMakeLists.txt
nimble/host/services/lls/: CMakeLists.txt
nimble/host/services/tps/: CMakeLists.txt
nimble/host/store/: CMakeLists.txt
nimble/transport/: CMakeLists.txt
nimble/transport/ram/: CMakeLists.txt
nimble/transport/uart/: CMakeLists.txt
nimble/transport/uart/src/: ble_hci_uart.c
porting/: CMakeLists.txt
porting/nimble/: CMakeLists.txt
py/newt/: config.py
