#-----------------------------------------------------------------------------
# NimBLE host
#
# @file CMakeLists.txt
#-----------------------------------------------------------------------------

ADD_DEFINITIONS (-DBLE_HOST=1)
ADD_DEFINITIONS (-DBLE_HS_AUTO_START=1)
ADD_DEFINITIONS (-DBLE_HS_DEBUG=0)
ADD_DEFINITIONS (-DBLE_HS_PHONY_HCI_ACKS=0)
ADD_DEFINITIONS (-DBLE_HS_REQUIRE_OS=1)
ADD_DEFINITIONS (-DBLE_MONITOR_UART=0)
ADD_DEFINITIONS (-DBLE_MONITOR_UART_DEV="uart0")
ADD_DEFINITIONS (-DBLE_MONITOR_UART_BAUDRATE=1000000)
ADD_DEFINITIONS (-DBLE_MONITOR_UART_BUFFER_SIZE=64)
ADD_DEFINITIONS (-DBLE_MONITOR_RTT=0)
ADD_DEFINITIONS (-DBLE_MONITOR_RTT_BUFFER_NAME="btmonitor")
ADD_DEFINITIONS (-DBLE_MONITOR_RTT_BUFFER_SIZE=256)
ADD_DEFINITIONS (-DBLE_MONITOR_RTT_BUFFERED=1)
ADD_DEFINITIONS (-DBLE_MONITOR_CONSOLE_BUFFER_SIZE=128)
ADD_DEFINITIONS (-DBLE_L2CAP_MAX_CHANS=3*BLE_MAX_CONNECTIONS)
ADD_DEFINITIONS (-DBLE_L2CAP_SIG_MAX_PROCS=1)
ADD_DEFINITIONS (-DBLE_L2CAP_JOIN_RX_FRAGS=1)
ADD_DEFINITIONS (-DBLE_L2CAP_RX_FRAG_TIMEOUT=30000)
ADD_DEFINITIONS (-DBLE_L2CAP_COC_MAX_NUM=0)
ADD_DEFINITIONS (-DBLE_L2CAP_COC_MPS='MSYS_1_BLOCK_SIZE-8')
ADD_DEFINITIONS (-DBLE_SM_LEGACY=1)
ADD_DEFINITIONS (-DBLE_SM_SC=0)
ADD_DEFINITIONS (-DBLE_SM_MAX_PROCS=1)
ADD_DEFINITIONS (-DBLE_SM_IO_CAP=BLE_HS_IO_NO_INPUT_OUTPUT)
ADD_DEFINITIONS (-DBLE_SM_OOB_DATA_FLAG=0)
ADD_DEFINITIONS (-DBLE_SM_BONDING=0)
ADD_DEFINITIONS (-DBLE_SM_MITM=0)
ADD_DEFINITIONS (-DBLE_SM_KEYPRESS=0)
ADD_DEFINITIONS (-DBLE_SM_OUR_KEY_DIST=0)
ADD_DEFINITIONS (-DBLE_SM_THEIR_KEY_DIST=0)
ADD_DEFINITIONS (-DBLE_SM_SC_DEBUG_KEYS=0)
ADD_DEFINITIONS (-DBLE_GAP_MAX_PENDING_CONN_PARAM_UPDATE=1)
ADD_DEFINITIONS (-DBLE_GATT_DISC_ALL_SVCS=BLE_ROLE_CENTRAL)
ADD_DEFINITIONS (-DBLE_GATT_DISC_SVC_UUID=BLE_ROLE_CENTRAL)
ADD_DEFINITIONS (-DBLE_GATT_FIND_INC_SVCS=BLE_ROLE_CENTRAL)
ADD_DEFINITIONS (-DBLE_GATT_DISC_ALL_CHRS=BLE_ROLE_CENTRAL)
ADD_DEFINITIONS (-DBLE_GATT_DISC_CHR_UUID=BLE_ROLE_CENTRAL)
ADD_DEFINITIONS (-DBLE_GATT_DISC_ALL_DSCS=BLE_ROLE_CENTRAL)
ADD_DEFINITIONS (-DBLE_GATT_READ=BLE_ROLE_CENTRAL)
ADD_DEFINITIONS (-DBLE_GATT_READ_UUID=BLE_ROLE_CENTRAL)
ADD_DEFINITIONS (-DBLE_GATT_READ_LONG=BLE_ROLE_CENTRAL)
ADD_DEFINITIONS (-DBLE_GATT_READ_MULT=BLE_ROLE_CENTRAL)
ADD_DEFINITIONS (-DBLE_GATT_WRITE_NO_RSP=BLE_ROLE_CENTRAL)
ADD_DEFINITIONS (-DBLE_GATT_SIGNED_WRITE=BLE_ROLE_CENTRAL)
ADD_DEFINITIONS (-DBLE_GATT_WRITE=BLE_ROLE_CENTRAL)
ADD_DEFINITIONS (-DBLE_GATT_WRITE_LONG=BLE_ROLE_CENTRAL)
ADD_DEFINITIONS (-DBLE_GATT_WRITE_RELIABLE=BLE_ROLE_CENTRAL)
ADD_DEFINITIONS (-DBLE_GATT_NOTIFY=1)
ADD_DEFINITIONS (-DBLE_GATT_INDICATE=1)
ADD_DEFINITIONS (-DBLE_GATT_READ_MAX_ATTRS=8)
ADD_DEFINITIONS (-DBLE_GATT_WRITE_MAX_ATTRS=4)
ADD_DEFINITIONS (-DBLE_GATT_MAX_PROCS=4)
ADD_DEFINITIONS (-DBLE_GATT_RESUME_RATE=1000)
ADD_DEFINITIONS (-DBLE_ATT_SVR_FIND_INFO=1)
ADD_DEFINITIONS (-DBLE_ATT_SVR_FIND_TYPE=1)
ADD_DEFINITIONS (-DBLE_ATT_SVR_READ_TYPE=1)
ADD_DEFINITIONS (-DBLE_ATT_SVR_READ=1)
ADD_DEFINITIONS (-DBLE_ATT_SVR_READ_BLOB=1)
ADD_DEFINITIONS (-DBLE_ATT_SVR_READ_MULT=1)
ADD_DEFINITIONS (-DBLE_ATT_SVR_READ_GROUP_TYPE=1)
ADD_DEFINITIONS (-DBLE_ATT_SVR_WRITE=1)
ADD_DEFINITIONS (-DBLE_ATT_SVR_WRITE_NO_RSP=1)
ADD_DEFINITIONS (-DBLE_ATT_SVR_SIGNED_WRITE=1)
ADD_DEFINITIONS (-DBLE_ATT_SVR_QUEUED_WRITE=1)
ADD_DEFINITIONS (-DBLE_ATT_SVR_NOTIFY=1)
ADD_DEFINITIONS (-DBLE_ATT_SVR_INDICATE=1)
ADD_DEFINITIONS (-DBLE_ATT_PREFERRED_MTU=256)
ADD_DEFINITIONS (-DBLE_ATT_SVR_MAX_PREP_ENTRIES=64)
ADD_DEFINITIONS (-DBLE_ATT_SVR_QUEUED_WRITE_TMO=30000)
ADD_DEFINITIONS (-DBLE_RPA_TIMEOUT=300)
ADD_DEFINITIONS (-DBLE_STORE_MAX_BONDS=3)
ADD_DEFINITIONS (-DBLE_STORE_MAX_CCCDS=8)
ADD_DEFINITIONS (-DBLE_MESH=0)
ADD_DEFINITIONS (-DBLE_HS_FLOW_CTRL=0)
ADD_DEFINITIONS (-DBLE_HS_FLOW_CTRL_ITVL=1000)
ADD_DEFINITIONS (-DBLE_HS_FLOW_CTRL_THRESH=2)
ADD_DEFINITIONS (-DBLE_HS_FLOW_CTRL_TX_ON_DISCONNECT=0)
ADD_DEFINITIONS (-DBLE_HS_STOP_ON_SHUTDOWN=1)
ADD_DEFINITIONS (-DBLE_HS_STOP_ON_SHUTDOWN_TIMEOUT=2000)
ADD_DEFINITIONS (-DBLE_HS_SYSINIT_STAGE=200)
ADD_DEFINITIONS (-DBLE_HS_LOG_MOD=4)
ADD_DEFINITIONS (-DBLE_HS_LOG_LVL=1)

# syscfg.logs:
#     BLE_HS_LOG:
#         module: MYNEWT_VAL(BLE_HS_LOG_MOD)
#         level: MYNEWT_VAL(BLE_HS_LOG_LVL)
# syscfg.vals.BLE_MESH:
#     BLE_SM_SC: 1


# define subprojects
find_subprojects (subprojects include src mesh pts tools test)

#-----------------------------------------------------------------------------
# Build configuration
#-----------------------------------------------------------------------------

newt_no_warnings ()

use_sdk_headers (
  nimble/host/util
  nimble/host/store/config
  nimble/host/store/ram
)

# build all projects
FOREACH (project ${subprojects})
  ADD_SUBDIRECTORY (${project} ${project})
ENDFOREACH ()

build_component_from (
  src/ble_att.c
  src/ble_att_clt.c
  src/ble_att_cmd.c
  src/ble_att_svr.c
  # src/ble_eddystone.c
  src/ble_gap.c
  src/ble_gattc.c
  src/ble_gatts.c
  src/ble_gatts_lcl.c
  src/ble_hs.c
  src/ble_hs_adv.c
  src/ble_hs_atomic.c
  src/ble_hs_cfg.c
  src/ble_hs_conn.c
  src/ble_hs_flow.c
  src/ble_hs_hci.c
  src/ble_hs_hci_cmd.c
  src/ble_hs_hci_evt.c
  src/ble_hs_hci_util.c
  src/ble_hs_id.c
  src/ble_hs_log.c
  src/ble_hs_mbuf.c
  src/ble_hs_misc.c
  src/ble_hs_mqueue.c
  src/ble_hs_periodic_sync.c
  src/ble_hs_pvcy.c
  src/ble_hs_shutdown.c
  src/ble_hs_startup.c
  src/ble_hs_stop.c
  # src/ble_ibeacon.c
  src/ble_l2cap.c
  src/ble_l2cap_coc.c
  src/ble_l2cap_sig.c
  src/ble_l2cap_sig_cmd.c
  src/ble_monitor.c
  src/ble_sm.c
  src/ble_sm_alg.c
  src/ble_sm_cmd.c
  src/ble_sm_lgcy.c
  src/ble_sm_sc.c
  src/ble_store.c
  src/ble_store_util.c
  src/ble_uuid.c
  util/src/addr.c
)
